# devtest

./: .gitignore  CMakeLists.txt  readme.md
lib/win32/boost/lib/cmake/boost_atomic-1.76.0/: boost_atomic-config.cmake  libboost_atomic-variant-mgw8-mt-s-x32-1_76-static.cmake
lib/win32/boost/lib/cmake/boost_chrono-1.76.0/: boost_chrono-config.cmake  libboost_chrono-variant-mgw8-mt-s-x32-1_76-static.cmake
lib/win32/boost/lib/cmake/boost_container-1.76.0/: boost_container-config.cmake  libboost_container-variant-mgw8-mt-s-x32-1_76-static.cmake
lib/win32/boost/lib/cmake/boost_filesystem-1.76.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-mgw8-mt-s-x32-1_76-static.cmake
lib/win32/boost/lib/cmake/boost_headers-1.76.0/: boost_headers-config.cmake
lib/win32/boost/lib/cmake/boost_log-1.76.0/: boost_log-config.cmake  libboost_log-variant-mgw8-mt-s-x32-1_76-static.cmake
lib/win32/boost/lib/cmake/boost_log_setup-1.76.0/: boost_log_setup-config.cmake  libboost_log_setup-variant-mgw8-mt-s-x32-1_76-static.cmake
lib/win32/boost/lib/cmake/boost_program_options-1.76.0/: boost_program_options-config.cmake  libboost_program_options-variant-mgw8-mt-s-x32-1_76-static.cmake
lib/win32/boost/lib/cmake/boost_regex-1.76.0/: boost_regex-config.cmake  libboost_regex-variant-mgw8-mt-s-x32-1_76-static.cmake
lib/win32/boost/lib/cmake/boost_system-1.76.0/: boost_system-config.cmake  libboost_system-variant-mgw8-mt-s-x32-1_76-static.cmake
lib/win32/boost/lib/cmake/boost_thread-1.76.0/: boost_thread-config.cmake  libboost_thread-variant-mgw8-mt-s-x32-1_76-static.cmake
lib/win32/opencv/include/opencv2/: cvconfig.h  opencv_modules.hpp
lib/win32/opencv/x64/mingw/staticlib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
source/: main.cpp
source/components/: CMakeLists.txt
source/components/faceCV/: CMakeLists.txt  faceCV.cpp  faceCV.hpp
source/core/: AppCore.cpp  AppCore.hpp
tests/: CMakeLists.txt
tests/components/: testFaceCV.cpp
